Update documentation to reflect GitHub Copilot CLI Challenge submission
- Add challenge badges and context to README
- Update pyproject.toml with challenge details
- Add LICENSE file
- Update all documentation to emphasize this is a demonstrator
- Create .github/README.md for repository landing page
- Improve .gitignore coverage

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,33 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Testing and coverage
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Type checking
+.mypy_cache/
+.pytype/
+
+# Linting
+.ruff_cache/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Don't ignore important demo files
+!submission.md
+!HOOK_SUMMARY.md
+!QUICKREF.md
+
